<resources>
    <string name="app_name">Phonebook</string>
    <string name="searchbar_hint">Search contacts</string>
    <string name="contacts">Contacts</string>
    <string name="highlights">Highlights</string>
    <string name="settings">Settings</string>
    <string name="you_have_no_contacts_yet">You have no contacts yet</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="add_contact">Add Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="contact_profile_picture">Contact Profile Picture</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="edit">Edit</string>
    <string name="favourite">Favourite</string>
    <string name="back">Back</string>
    <string name="xxx_xxxxxxx">XXX-XXXXXXX</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="xx_xx_on_dd_mm_yyyy">XX:XX on DD-MM-YYYY</string>
    <string name="close">Close</string>
    <string name="base_manage">Base Manage</string>
    <string name="save_contact">Save Contact</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleting_this_contact_is_irreversible">Deleting this contact is irreversible.</string>
    <string name="once_this_contact_is_deleted_it_cannot_be_retrieved">Once this contact is deleted, it cannot be retrieved.</string>
    <string name="no_birthdays_today">No birthdays today</string>
    <string name="today_s_birthdays">Today\'s Birthdays</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_order">Sort Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="done">Done</string>
    <string name="backup_contacts">Backup Contacts (.csv)</string>
</resources>