<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/space_xxl"
        tools:context=".ui.sort.SortContactsFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_xxxl"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_order"
                    android:textSize="@dimen/text_xxl"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbAsc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/ascending" />

                    <RadioButton
                        android:id="@+id/rbDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/descending" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by"
                    android:textSize="@dimen/text_xxl"
                    android:layout_marginTop="@dimen/space_xl"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/first_name" />

                    <RadioButton
                        android:id="@+id/rbLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/last_name" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xxxxl"
                    android:paddingHorizontal="@dimen/space_xxxxl"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/cs_blue"
                    app:cornerRadius="@dimen/space_m"
                    android:text="@string/done" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>
