<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/g_border"
        tools:context=".ui.confirmationDelete.ConfirmationDeleteFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/space_xs"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/space_xxxl">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure"
                    android:textSize="@dimen/text_xxl"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/once_this_contact_is_deleted_it_cannot_be_retrieved"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/space_xs"
                    android:textSize="@dimen/text_xl" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/space_xxl"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbCancel"
                        android:layout_width="@dimen/space_xxxxxxxl"
                        android:layout_height="wrap_content"
                        app:cornerRadius="@dimen/space_xs"
                        android:text="@string/cancel" />

                    <Space
                        android:layout_width="@dimen/space_xxl"
                        android:layout_height="@dimen/space_nil" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mbDelete"
                        android:layout_width="@dimen/space_xxxxxxxl"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cs_red"
                        app:cornerRadius="@dimen/space_xs"
                        android:text="@string/delete" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>