<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/llContact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstname"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/TextAppearance.Material3.TitleMedium"/>

        <View
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastname"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/TextAppearance.Material3.TitleMedium"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/call"
            android:src="@drawable/ic_baseline_call_24" />

        <View
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/ivText"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/text"
            android:src="@drawable/ic_baseline_sms_24" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>